@@ -4,6 +4,8 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+2011-06-20  Filippo Valsorda
+    * Refresh IMDB-it plugin
 
 2011-06-20  Michael Jahn
 	* [#570053] Region selection shows DVD regions when media is not DVD.
